--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #7fad39;
+	background: #cf1b1b;
 	content: "";
 	margin: 0 auto;
 }
@@ -167,7 +167,7 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: #cf1b1b;
 	letter-spacing: 2px;
 }
 
@@ -178,7 +178,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: #cf1b1b;
 	border: none;
 }
 
@@ -409,6 +409,7 @@ ol {
 
 .header__logo {
 	padding: 15px 0;
+	width: 30%;
 }
 
 .header__logo a {
@@ -449,7 +450,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -460,7 +461,7 @@ ol {
 }
 
 .header__menu ul li.active a {
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -470,7 +471,7 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .header__menu ul li:last-child {
@@ -524,7 +525,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #7fad39;
+	background: #cf1b1b;
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -587,7 +588,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: #cf1b1b;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -700,7 +701,7 @@ ol {
 
 .hero__search__phone__icon {
 	font-size: 18px;
-	color: #7fad39;
+	color: #cf1b1b;
 	height: 50px;
 	width: 50px;
 	background: #f5f5f5;
@@ -738,7 +739,7 @@ ol {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 4px;
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .hero__text h2 {
@@ -840,7 +841,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #7fad39;
+	background: #cf1b1b;
 	content: "";
 	opacity: 0;
 }
@@ -888,8 +889,8 @@ ol {
 }
 
 .featured__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #cf1b1b;
+	border-color: #cf1b1b;
 }
 
 .featured__item__pic__hover li:hover a i {
@@ -1324,8 +1325,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #cf1b1b;
+	border-color: #cf1b1b;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1523,7 +1524,7 @@ ol {
 }
 
 .filter__option span:hover {
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .product__item {
@@ -1564,8 +1565,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #cf1b1b;
+	border-color: #cf1b1b;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1645,8 +1646,8 @@ ol {
 
 .product__pagination a:hover,
 .blog__pagination a:hover {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #cf1b1b;
+	border-color: #cf1b1b;
 	color: #ffffff;
 }
 
@@ -1919,6 +1920,7 @@ ol {
 .shoping__cart__table table tbody tr td.shoping__cart__item img {
 	display: inline-block;
 	margin-right: 25px;
+	width: 30%;
 }
 
 .shoping__cart__table table tbody tr td.shoping__cart__item h5 {
@@ -2154,8 +2156,8 @@ ol {
 }
 
 .checkout__input__checkbox label input:checked~.checkmark {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #cf1b1b;
+	border-color: #cf1b1b;
 }
 
 .checkout__input__checkbox label input:checked~.checkmark:after {
@@ -2382,7 +2384,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .blog__sidebar__search {
@@ -2602,7 +2604,7 @@ ol {
 }
 
 .blog__details__widget .blog__details__social a:hover {
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .blog__details__widget .blog__details__social a:last-child {
@@ -2632,6 +2634,7 @@ ol {
 
 .footer__about__logo {
 	margin-bottom: 15px;
+	width: 50%;
 }
 
 .footer__about__logo a {
@@ -2720,7 +2723,7 @@ ol {
 }
 
 .footer__widget .footer__widget__social a:hover {
-	background: #7fad39;
+	background: #cf1b1b;
 	color: #ffffff;
 	border-color: #ffffff;
 }
@@ -2758,7 +2761,7 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #7fad39;
+	color: #cf1b1b;
 }
 
 .contact__widget h4 {
@@ -2797,7 +2800,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #7fad39;
+	color: #cf1b1b;
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
@@ -2935,6 +2938,11 @@ ol {
 	.shoping__discount form input {
 		width: 240px;
 	}
+
+	.header__logo {
+		padding: 15px 0;
+		width: 30%;
+	}
 }
 
 /* Tablet Device = 768px */
@@ -3054,7 +3062,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #cf1b1b;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3120,7 +3128,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #cf1b1b;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3158,6 +3166,10 @@ ol {
 	.over_hid {
 		overflow: hidden;
 	}
+	.header__logo {
+		padding: 15px 0;
+		width: 30%;
+	}
 }
 
 /* Wide Mobile = 480px */
@@ -3165,6 +3177,9 @@ ol {
 @media only screen and (max-width: 767px) {
 	.hero__categories {
 		margin-bottom: 30px;
+	}
+	.hero__categories ul {
+		display: none;
 	}
 	.hero__search {
 		margin-bottom: 30px;
@@ -3222,6 +3237,11 @@ ol {
 	}
 	.shoping__cart__table {
 		overflow-y: auto;
+	}
+	.shoping__cart__table table tbody tr td.shoping__cart__item img {
+		display: inline-block;
+		margin-right: 25px;
+		width: 80%;
 	}
 	.shoping__discount form input {
 		margin-bottom: 15px;
@@ -3312,7 +3332,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #cf1b1b;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3378,7 +3398,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #cf1b1b;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3410,11 +3430,15 @@ ol {
 		display: none;
 	}
 	.header__cart {
-		text-align: center;
+		text-align: right;
 		padding: 10px 0 24px;
 	}
 	.over_hid {
 		overflow: hidden;
+	}
+	.header__logo {
+		padding: 15px 0;
+		width: 30%;
 	}
 }
 
@@ -3464,5 +3488,9 @@ ol {
 	}
 	.blog__details__hero__text h2 {
 		font-size: 24px;
+	}
+	.header__logo {
+		padding: 15px 0;
+		width: 50%;
 	}
 }
